<resources>
    <string name="app_name">Watoto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_devotional">Devotional</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="sign_in_heading">Sign in to your account</string>
    <string name="sign_up_heading">sign up for an account</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm">Confirm Password</string>
    <string name="sign_up_btn">sign up</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="title_activity_video">Watoto</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="video">Video</string>
    <string name="dev_text">For inn the gospel the righteousness of God is revealed-a righteousness that is by faith from first to last, just as it...</string>
    <string name="event_head">Dont miss this youth event beginning August 9</string>
    <string name="event_disc">All roads lead to watoto church central as we come together to celebrate this event. make sure you carry someone to come and...</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_choir">Book Choir</string>
    <string name="choir">choir</string>
    <string name="donate">donate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="about">Gary and Marilyn Skinner
Gary and Marilyn Skinner are the passionate and visionary leaders of Watoto Ministries, which includes Watoto Church, Watoto Child Care Ministries, Watoto Children’s Choir and Living Hope.</string>
    <string name="more">In 1984, Gary and Marilyn founded Watoto Church in the heart of Uganda’s war-torn capital, Kampala.

Watoto Church is a dynamic, cell-based community church that welcomes more than 24,000 people each weekend to celebrate Christ.</string>
    <string name="title_vision">Vision</string>
    <string name="title_mission">Mission</string>
    <string name="title_objectives">Values</string>
    <string name="title_activity_work">Activities</string>
    <string name="desc">Gary passionately believes that it is the responsibility of the local church to solve community problems. Watoto Church cares for the community holistically through over 2,900 cell groups, which meet in people’s homes each week.</string>
</resources>
