<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pat.admin.watoto.MainActivity">
    <item
        android:id="@+id/sign_in"
        android:title="@string/sign_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_up"
        android:title="@string/sign_up"
        app:showAsAction="never" />

    <item
        android:id="@+id/video"
        android:title="@string/video"
        app:showAsAction="never" />

    <item
        android:id="@+id/donate"
        android:title="@string/donate"
        app:showAsAction="never" />

    <item
        android:id="@+id/choir"
        android:title="@string/choir"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
