<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/maroon_medium"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.pat.admin.watoto.SignUpActivity"
            tools:showIn="@layout/activity_sign_in">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.AppBarLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sign_up" />

            <EditText
                android:id="@+id/signInName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield"
                android:drawableLeft="@drawable/ic_action_account_box"
                android:drawablePadding="10dp"
                android:hint="@string/sign_up_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:textColor="#000000"
                android:textColorHint="#900C3F" />

            <EditText
                android:id="@+id/signInEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textfield"
                android:drawableLeft="@drawable/ic_communication_email"
                android:drawablePadding="10dp"
                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:textColor="#000000"
                android:textColorHint="#900C3F" />

            <EditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textfield"
                android:drawableLeft="@drawable/ic_action_https"
                android:drawablePadding="10dp"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#900C3F" />

            <EditText
                android:id="@+id/signInConfirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textfield"
                android:drawableLeft="@drawable/ic_action_https"
                android:drawablePadding="10dp"
                android:hint="@string/sign_up_confirm"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:textColorHint="#900C3F" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/green_btn"
                android:text="@string/sign_up_btn"
                android:textColor="#0e6b19"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />
</android.support.v4.widget.DrawerLayout>