<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/area"
        android:paddingBottom="0dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.AppBarLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp">

                <VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/sub_area"
                android:paddingBottom="0dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <ImageView
                    android:id="@+id/dev_image"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rsz_logomakr" />

                <TextView
                    android:id="@+id/dev_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/dev_image"
                    android:paddingTop="5dp"
                    android:text="Daily Devotional"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:text="Today" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dev_heading"
                    android:layout_toRightOf="@+id/dev_image"
                    android:layout_weight="1"
                    android:text="Romans 1:17 NIV"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dev_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dev_image"
                    android:text="@string/dev_text"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dev_text"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="0dp"
                    android:text="read more"
                    android:textAllCaps="true"
                    android:textColor="#900C3F"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sub_area"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:text="Upcoming Events"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/event2" />

                <TextView
                    android:id="@+id/event_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/event_head"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/event_disc"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="read more"
                    android:textAllCaps="true"
                    android:textColor="#900C3F"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/sub_area"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#000000">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="25dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/event" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/event_head"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/event_disc"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="read more"
                    android:textAllCaps="true"
                    android:textColor="#900C3F"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />
</android.support.v4.widget.DrawerLayout>